Grafana-setup-on-AKS/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.nishantg.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80

  tls:
  - hosts:
    - grafana.nishantg.shop
    secretName: grafana-nishantg-secret
